# maplab

algorithms/map-optimization/include/map-optimization/: optimization-problem.h  vi-map-optimizer.h  vi-optimization-builder.h
algorithms/map-optimization/src/: optimization-problem.cc  vi-map-optimizer.cc  vi-optimization-builder.cc
applications/rovioli/scripts/tutorials/: tutorial_cla  tutorial_euroc
hierarchical-bundle-adjustment-plugin/: CMakeLists.txt  package.xml
hierarchical-bundle-adjustment-plugin/include/hierarchical-bundle-adjustment-plugin/: optimizer-plugin.h  posegraph_error.h
hierarchical-bundle-adjustment-plugin/src/: optimizer-plugin.cc  posegraph_error.cc
map-structure/vi-map/include/vi-map/: landmark.h  vertex.h  vi-map.h
map-structure/vi-map/src/: landmark.cc  vertex.cc  vi-map.cc
