<?xml version="1.0"?>
<package format="2">
  <name>hierarchical_bundle_djustment_plugin</name>
  <version>0.0.0</version>
  <description>
    A plugin to perform hierarchical bundle adjustment
  </description>
  <maintainer email="fawang@student.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>ceres_catkin</depend>
  <depend>ceres_error_terms</depend>
  <depend>console_common</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>map_manager</depend>
  <depend>map_optimization</depend>
  <depend>maplab_common</depend>
  <depend>maplab_test_data</depend>
  <depend>vi_map</depend>
  <depend>vi_mapping_test_app</depend>
  <depend>visualization</depend>
</package>
